[package]
description = "Collection of Cairo language dependencies that are used throughout Katana. Unifying the Cairo language based dependencies to avoid dependency conflict with the versions used by Dojo."
edition.workspace = true
license.workspace = true
name = "katana-cairo"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Use from git instead of crates.io registry so that the workspace patches aren't applied.
[dependencies]
cairo-lang-casm = { git = "https://github.com/reilabs/cairo", branch = "hints-blockifier-2.7" }
cairo-lang-runner = { git = "https://github.com/reilabs/cairo", branch = "hints-blockifier-2.7" }
cairo-lang-sierra = { git = "https://github.com/reilabs/cairo", branch = "hints-blockifier-2.7" }
cairo-lang-sierra-to-casm = { git = "https://github.com/reilabs/cairo", branch = "hints-blockifier-2.7" }
cairo-lang-starknet = { git = "https://github.com/reilabs/cairo", branch = "hints-blockifier-2.7" }
cairo-lang-starknet-classes = { git = "https://github.com/reilabs/cairo", branch = "hints-blockifier-2.7" }
cairo-lang-utils = { git = "https://github.com/reilabs/cairo", branch = "hints-blockifier-2.7" }
cairo-vm = "1.0.0-rc3"
starknet_api = "0.13.0-dev.9"
